2010-10-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c, data/snippets.conf:
   Move HTML automatic <table> tag completion into a 'table' snippet
   so the user can decide when to use it (patch by Eugene Arshinov,
   thanks).


2010-10-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/prefs.c:
   Fix not changing edited keybindings when cancelling the Preferences
   dialog.
 * data/filetypes.xml:
   Add HTML5 element names (thanks to Ross McKay).


2010-10-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/filetypes.c:
   Remove filetype default extensions from code.
 * src/filetypes.c:
   Allow 'Foo=' in filetype_extensions.conf to remove all patterns.
 * src/prefs.c:
   Refactor shared code with kb_cell_edited_cb().


2010-10-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Use radio buttons for View->Editor->Color Schemes menu.
   Don't hide the menu when only the default item is available.
 * data/colorschemes, data/colorschemes/alt.conf, wscript, Makefile.am:
   Add alternative color scheme based on Python colors.
 * scintilla/LexErlang.cxx, scintilla/makefile.win32,
   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,
   src/about.c, src/filetypes.c, src/filetypes.h, THANKS,
   data/filetype_extensions.conf, data/filetypes.erlang, wscript:
   Add Erlang filetype (patch by Taylor Venable, thanks).
 * src/filetypes.c, data/filetypes.*:
   Move filetype 'extension' default into data files.
 * src/filetypes.c, data/filetypes.vala:
   Move filetype comment_{open,close} defaults into data files.


2010-10-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetypes.c, data/filetypes.d:
   Add missing C99 keyword 'restrict' (#3046716).
   Add missing D1 keywords 'ref' and 'macro'.
   Add D2 keywords.
 * tagmanager/c.c:
   Parse Vala functions with contracts (#3080232).
 * src/project.c: