@@ -86,6 +86,7 @@ Thomas Huth <th(dot)huth(at)googlemail(dot)com> - Forth filetype
 Adam Ples <adamples(at)users(dot)sourceforge(dot)net> - Group encodings in open dialog
 Mário Silva <sharelider(at)gmail(dot)com> - Lisp filetype
 Taylor Venable <taylor(at)metasyntax(dot)net> - Erlang filetype
+Manuel Bua <manuel(dot)bua(at)gmail(dot)com> - Ensure consistent line endings pref.
 
 Translators:
 ------------
