@@ -7856,6 +7856,26 @@ Match braces</property>
 			  </child>
 
 			  <child>
+			    <widget class="GtkCheckButton" id="check_ensure_convert_new_lines">
+			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Ensures that newline characters always get converted before saving, avoiding mixed line endings in the same file</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">Ensure consistent line endings</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="focus_on_click">True</property>
+			      <property name="active">False</property>
+			      <property name="inconsistent">False</property>
+			      <property name="draw_indicator">True</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">False</property>
+			      <property name="fill">False</property>
+			    </packing>
+			  </child>
+
+			  <child>
 			    <widget class="GtkCheckButton" id="check_trailing_spaces">
 			      <property name="visible">True</property>
 			      <property name="tooltip" translatable="yes">Removes trailing spaces and tabs and the end of lines</property>
